--- a/filial2.html
+++ b/filial2.html
@@ -138,13 +138,12 @@
 
         <div class="filial-head">
             <div class="filial-head_wrap">
-                <h2 class="green">Филиал Черемушки</h2>
+                <h2 class="green">Филиал Черемушки<br><span>Москва</span></h2>
                 <div class="filial-head-desc">
                     <ul>
                         <li><b>Адрес:</b>ул. Профсоюзная, д. 43к1</li>
-                        <li><b>Телефон:</b>8 (495) 120-7781</li>
+                        <li><b>Телефон:</b>8 (495) 120-77-81</li>
                     </ul>
-                    <a class="button_green_full">Записаться на визит</a>
                 </div>
                 <div class="filial-head-image">
                     <picture>
@@ -156,34 +155,47 @@
             </div>
         </div>
 
-        <div class="teacher-about-filial">
+        <div class="teacher-about-filial right cheremushki">
             <div class="teacher-about-filial_wrap">
-                <div class="teacher-about-filial-item">
-                    <div class="teacher-about-filial-head">
-                        <div><img src="./assets/image/teacher/5.png" /></div>
-                        <div>
-                            <h4 class="red">ЮЛИЯ НИКОЛАЕВА</h4>
-                            <span>Директор филиала</span>
+                <div class="teacher-about-filial-item-wrap">
+                    <div class="teacher-about-filial-item">
+                        <div class="teacher-about-filial-head">
+                            <div><img src="./assets/image/filial/teacher/nadezhda.jpg" /></div>
+                            <div>
+                                <h4 class="red">Надежда Салганская</h4>
+                                <span>Исполнительный директор сети Smart Education</span>
+                            </div>
                         </div>
+                        <p>Школа Smart Education в Черемушках — это качество преподавания, гибкая ценовая политика и уникальные мероприятия Smart Club. Будьте уверены: мы научим общаться на английском людей любого возраста, а школьников еще и подготовим к ЕГЭ. Наш Smart Club с носителями языка поможет снять языковой барьер. Приходите и станьте частью smart-команды, чтобы увидеть все собственными глазами!</p>
                     </div>
-                    <p>Школа Smart Education в Митино — это качество преподавания, гибкая ценовая политика и уникальные
-                        мероприятия Smart Club. Будьте уверены: мы научим общаться на английском людей любого возраста,
-                        а школьников еще и подготовим к ЕГЭ. Наш Smart Club с носителями языка поможет снять языковой
-                        барьер. Приходите и станьте частью smart-команды, чтобы увидеть все собственными глазами! </p>
                 </div>
-                <div class="teacher-about-filial-item">
-                    <div class="teacher-about-filial-head">
-                        <div><img src="./assets/image/teacher/1.png" /></div>
-                        <div>
-                            <h4 class="red">ИРИНА БАРКАНОВА</h4>
-                            <span>Академический директор
-                                Smart Education</span>
+                <div class="teacher-about-filial-item-wrap">
+                    <div class="teacher-about-filial-item">
+                        <div class="teacher-about-filial-head">
+                            <div><img src="./assets/image/filial/teacher/Margarita.png" /></div>
+                            <div>
+                                <h4 class="red">Маргарита Воробьева</h4>
+                                <span>Академический директор филиала Черемушки</span>
+                            </div>
                         </div>
+                        <p>Наши учителя точно знают, как увлечь студентов английским языком, потому что они всегда в курсе современных методик преподавания. Богатый опыт, любовь к языку, международные программы — всё работает на то, чтобы вы и ваши дети говорили на английском. Ведь отличные результаты учеников и являются доказательством нашего профессионализма. И мы ими гордимся!</p>
                     </div>
-                    <p>Наши учителя точно знают, как увлечь студентов английским языком, потому что они всегда в курсе
-                        современных методик преподавания. Богатый опыт, любовь к языку, международные программы — всё
-                        работает на то, чтобы вы и ваши дети говорили на английском. Ведь отличные результаты учеников и
-                        являются доказательством нашего профессионализма. И мы ими гордимся!</p>
+                </div>
+            </div>
+        </div>
+        
+
+        <!-- Gallery filial -->
+        <div class="filial-gallery">
+            <div class="wrap">
+                <div class="filial-gallery-item">
+                    <img src="./assets/image/filial/gallery/1.png" />
+                </div>
+                <div class="filial-gallery-item">
+                    <img src="./assets/image/filial/gallery/2.png" />
+                </div>
+                <div class="filial-gallery-item">
+                    <img src="./assets/image/filial/gallery/3.png" />
                 </div>
             </div>
         </div>
@@ -191,47 +203,45 @@
 
 
         <!-- Course Advantages  -->
-        <div class="home-teacher">
-            <div class="home-teacher-wrap">
+        <div class="filial-teacher">
+            <div class="filial-teacher-wrap">
                 <h2 class="green">Преподаватели</h2>
-                <div class="home-teacher-slider">
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
+                <div class="filial-teacher-slider">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
                         <img src="./assets/image/home/teacher/1.png" />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
-                        <p>Исполнительный директор
-                            Smart Education</p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="800">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="600">
                         <img src="./assets/image/home/teacher/2.png" />
                         <h4 class="red">Мария суетнова</h4>
-                        <p>Преподаватель,
-                            филиал Митинский, г. Москва
-                        </p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="700">
                         <img src="./assets/image/home/teacher/3.png" />
                         <h4 class="red">карина мамонова</h4>
-                        <p>Преподаватель,
-                            филиал Митинский, г. Москва</p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1500">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="800">
                         <img src="./assets/image/home/teacher/4.png" />
                         <h4 class="red">Анастасия сёмина</h4>
-                        <p>Преподаватель,
-                            филиал Митинский, г. Москва</p>
                     </div>
-                    <div class="home-teacher-item">
-                        <img src="./assets/image/home/teacher/1.png" />
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="900">
+                        <img src="./assets/image/home/teacher/1.png"  />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
-                        <p>Исполнительный директор
-                            Smart Education</p>
                     </div>
-                    <div class="home-teacher-item">
-                        <img src="./assets/image/home/teacher/2.png" />
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">
+                        <img src="./assets/image/home/teacher/2.png"  />
                         <h4 class="red">Мария суетнова</h4>
-                        <p>Преподаватель,
-                            филиал Митинский, г. Москва
-                        </p>
+                    </div>
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
+                        <img src="./assets/image/home/teacher/4.png" />
+                        <h4 class="red">Анастасия сёмина</h4>
+                    </div>
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="600">
+                        <img src="./assets/image/home/teacher/1.png"  />
+                        <h4 class="red">ЯНА НЕМЧИНОВА</h4>
+                    </div>
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="700">
+                        <img src="./assets/image/home/teacher/2.png"  />
+                        <h4 class="red">Мария суетнова</h4>
                     </div>
                 </div>
             </div>
@@ -239,57 +249,16 @@
 
         <!-- Whom suit -->
         <div class="course-suit filial">
-            <div class="course-suit_all-wrap">
+            <div class="filial-suit_all-wrap">
                 <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="300">Занятия в школе</h2>
-                <div class="course-suit-gallery">
-                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/1x2.png 2x, ./assets/image/children-group/gallery/1.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/1.png" alt="">
-                        </picture>
-                    </div>
-                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1300">
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/2x2.png 2x, ./assets/image/children-group/gallery/2.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/1.png" alt="">
-                        </picture>
-                    </div>
-                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1600">
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/3x2.png 2x, ./assets/image/children-group/gallery/3.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/3.png" alt="">
-                        </picture>
-                    </div>
-                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1900">
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/4x2.png 2x, ./assets/image/children-group/gallery/4.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/4.png" alt="">
-                        </picture>
-                    </div>
-                    <div>
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/5x2.png 2x, ./assets/image/children-group/gallery/5.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/5.png" alt="">
-                        </picture>
-                    </div>
-                    <div>
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/6x2.png 2x, ./assets/image/children-group/gallery/6.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/6.png" alt="">
-                        </picture>
-                    </div>
+                <div class="filial-suit-gallery">
+                    <div class="filial-suit-gallery-item item1" style="background-image: url(./assets/image/filial/suit/1.png);"></div>
+                    <div class="filial-suit-gallery-item item2" style="background-image: url(./assets/image/filial/suit/2.png);"></div>
+                    <div class="filial-suit-gallery-item item3" style="background-image: url(./assets/image/filial/suit/3.png);"></div>
+                    <div class="filial-suit-gallery-item item4" style="background-image: url(./assets/image/filial/suit/4.png);"></div>
+                    <div class="filial-suit-gallery-item item5" style="background-image: url(./assets/image/filial/suit/5.png);"></div>
+                    <div class="filial-suit-gallery-item item6" style="background-image: url(./assets/image/filial/suit/6.png);"></div>
+                    <div class="filial-suit-gallery-item item7" style="background-image: url(./assets/image/filial/suit/7.png);"></div>
                 </div>
             </div>
         </div>
