--- a/filial3.html
+++ b/filial3.html
@@ -138,13 +138,12 @@
 
         <div class="filial-head">
             <div class="filial-head_wrap">
-                <h2 class="green">Филиал Горьковский</h2>
+                <h2 class="green">Филиал ГОРЬКОВСКИЙ<br><span>НИЖНИЙ НОВГОРОД</span></h2>
                 <div class="filial-head-desc">
                     <ul>
                         <li><b>Адрес:</b>Горького ул., 218/22, 2 этаж</li>
-                        <li><b>Телефон:</b>8 (831) 418-0665</li>
+                        <li><b>Телефон:</b>8 (831) 266-1450</li>
                     </ul>
-                    <a class="button_green_full">Записаться на визит</a>
                 </div>
                 <div class="filial-head-image">
                     <picture>
@@ -156,28 +155,47 @@
             </div>
         </div>
 
-        <div class="teacher-about-filial">
+        <div class="teacher-about-filial left gorkovski">
             <div class="teacher-about-filial_wrap">
-                <div class="teacher-about-filial-item">
-                    <div class="teacher-about-filial-head">
-                        <div><img src="https://www.smart-education.ru/static/images/contacts/nn-1/direction-item-1.png" /></div>
-                        <div>
-                            <h4 class="red">ЯНА НЕМЧИНОВА</h4>
-                            <span>Директор школ Smart Education в Нижнем Новгороде</span>
+                <div class="teacher-about-filial-item-wrap">
+                    <div class="teacher-about-filial-item">
+                        <div class="teacher-about-filial-head">
+                            <div><img src="./assets/image/filial/teacher/yana.png" /></div>
+                            <div>
+                                <h4 class="red">ЯНА НЕМЧИНОВА</h4>
+                                <span>Директор школ Smart Education в Нижнем Новгороде</span>
+                            </div>
                         </div>
+                        <p>Первое, что что Вы заметите, придя в школу Smart Education на улице М. Горького, — это особая атмосфера. Здесь вас встретят люди, влюбленные в свое дело. Чтобы добиться высоких результатов в обучении наших студентов мы объединяем наш опыт, современные программы, увлеченность, хорошее настроение и даже азарт! <b>We love English!</b> И эта искренняя любовь замотивирует вас и ваших детей на новые лингвистические подвиги! <b>Welcome!</b></p>
                     </div>
-                    <p>Первое, что что Вы заметите, придя в школу Smart Education на улице М. Горького, — это особая атмосфера. Здесь вас встретят люди, влюбленные в свое дело. Чтобы добиться высоких результатов в обучении наших студентов мы объединяем наш опыт, современные программы, увлеченность, хорошее настроение и даже азарт! We love English! И эта искренняя любовь замотивирует вас и ваших детей на новые лингвистические подвиги! Welcome! </p>
                 </div>
-                <div class="teacher-about-filial-item">
-                    <div class="teacher-about-filial-head">
-                        <div><img src="https://www.smart-education.ru/static/images/contacts/nn-1/direction-item-2.png" /></div>
-                        <div>
-                            <h4 class="red">МАРИАННА
-                                ГАНЮШКИНА</h4>
-                            <span>Академический директор школы Smart Education, филиал Горьковский</span>
+                <div class="teacher-about-filial-item-wrap">
+                    <div class="teacher-about-filial-item">
+                        <div class="teacher-about-filial-head">
+                            <div><img src="./assets/image/filial/teacher/natalya.png" /></div>
+                            <div>
+                                <h4 class="red">Наталья Свешникова</h4>
+                                <span>Академический директор школы Smart Education, филиал Горьковский</span>
+                            </div>
                         </div>
+                        <p>Стать преподавателем Smart Education непросто. Нужно иметь многолетний опыт работы, высшее педагогическое образование, кембриджские сертификаты TKT и САЕ. Но это только основа, видимая часть айсберга! Главное вы увидите на уроках: <b>мы превращаем язык из скучного школьного предмета в средство общения.</b> А как это нам удается — вот главное волшебство, дар, которым должен обладать настоящий преподаватель!</p>
                     </div>
-                    <p>Стать преподавателем Smart Education непросто. Нужно иметь многолетний опыт работы, высшее педагогическое образование, кембриджские сертификаты TKT и САЕ. Но это только основа, видимая часть айсберга! Главное вы увидите на уроках: мы превращаем язык из скучного школьного предмета в средство общения. А как это нам удается — вот главное волшебство, дар, которым должен обладать настоящий преподаватель!</p>
+                </div>
+            </div>
+        </div>
+        
+
+        <!-- Gallery filial -->
+        <div class="filial-gallery">
+            <div class="wrap">
+                <div class="filial-gallery-item">
+                    <img src="./assets/image/filial/gallery/1.png" />
+                </div>
+                <div class="filial-gallery-item">
+                    <img src="./assets/image/filial/gallery/2.png" />
+                </div>
+                <div class="filial-gallery-item">
+                    <img src="./assets/image/filial/gallery/3.png" />
                 </div>
             </div>
         </div>
@@ -185,47 +203,45 @@
 
 
         <!-- Course Advantages  -->
-        <div class="home-teacher">
-            <div class="home-teacher-wrap">
+        <div class="filial-teacher">
+            <div class="filial-teacher-wrap">
                 <h2 class="green">Преподаватели</h2>
-                <div class="home-teacher-slider">
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
+                <div class="filial-teacher-slider">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
                         <img src="./assets/image/home/teacher/1.png" />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
-                        <p>Исполнительный директор
-                            Smart Education</p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="800">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="600">
                         <img src="./assets/image/home/teacher/2.png" />
                         <h4 class="red">Мария суетнова</h4>
-                        <p>Преподаватель,
-                            филиал Митинский, г. Москва
-                        </p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="700">
                         <img src="./assets/image/home/teacher/3.png" />
                         <h4 class="red">карина мамонова</h4>
-                        <p>Преподаватель,
-                            филиал Митинский, г. Москва</p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1500">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="800">
                         <img src="./assets/image/home/teacher/4.png" />
                         <h4 class="red">Анастасия сёмина</h4>
-                        <p>Преподаватель,
-                            филиал Митинский, г. Москва</p>
                     </div>
-                    <div class="home-teacher-item">
-                        <img src="./assets/image/home/teacher/1.png" />
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="900">
+                        <img src="./assets/image/home/teacher/1.png"  />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
-                        <p>Исполнительный директор
-                            Smart Education</p>
                     </div>
-                    <div class="home-teacher-item">
-                        <img src="./assets/image/home/teacher/2.png" />
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">
+                        <img src="./assets/image/home/teacher/2.png"  />
                         <h4 class="red">Мария суетнова</h4>
-                        <p>Преподаватель,
-                            филиал Митинский, г. Москва
-                        </p>
+                    </div>
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
+                        <img src="./assets/image/home/teacher/4.png" />
+                        <h4 class="red">Анастасия сёмина</h4>
+                    </div>
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="600">
+                        <img src="./assets/image/home/teacher/1.png"  />
+                        <h4 class="red">ЯНА НЕМЧИНОВА</h4>
+                    </div>
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="700">
+                        <img src="./assets/image/home/teacher/2.png"  />
+                        <h4 class="red">Мария суетнова</h4>
                     </div>
                 </div>
             </div>
@@ -233,57 +249,16 @@
 
         <!-- Whom suit -->
         <div class="course-suit filial">
-            <div class="course-suit_all-wrap">
+            <div class="filial-suit_all-wrap">
                 <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="300">Занятия в школе</h2>
-                <div class="course-suit-gallery">
-                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/1x2.png 2x, ./assets/image/children-group/gallery/1.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/1.png" alt="">
-                        </picture>
-                    </div>
-                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1300">
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/2x2.png 2x, ./assets/image/children-group/gallery/2.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/1.png" alt="">
-                        </picture>
-                    </div>
-                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1600">
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/3x2.png 2x, ./assets/image/children-group/gallery/3.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/3.png" alt="">
-                        </picture>
-                    </div>
-                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1900">
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/4x2.png 2x, ./assets/image/children-group/gallery/4.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/4.png" alt="">
-                        </picture>
-                    </div>
-                    <div>
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/5x2.png 2x, ./assets/image/children-group/gallery/5.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/5.png" alt="">
-                        </picture>
-                    </div>
-                    <div>
-                        <picture>
-                            <source
-                                srcset="./assets/image/children-group/gallery/6x2.png 2x, ./assets/image/children-group/gallery/6.png 1x"
-                                type="image/png">
-                            <img src="./assets/image/children-group/gallery/6.png" alt="">
-                        </picture>
-                    </div>
+                <div class="filial-suit-gallery">
+                    <div class="filial-suit-gallery-item item1" style="background-image: url(./assets/image/filial/suit/1.png);"></div>
+                    <div class="filial-suit-gallery-item item2" style="background-image: url(./assets/image/filial/suit/2.png);"></div>
+                    <div class="filial-suit-gallery-item item3" style="background-image: url(./assets/image/filial/suit/3.png);"></div>
+                    <div class="filial-suit-gallery-item item4" style="background-image: url(./assets/image/filial/suit/4.png);"></div>
+                    <div class="filial-suit-gallery-item item5" style="background-image: url(./assets/image/filial/suit/5.png);"></div>
+                    <div class="filial-suit-gallery-item item6" style="background-image: url(./assets/image/filial/suit/6.png);"></div>
+                    <div class="filial-suit-gallery-item item7" style="background-image: url(./assets/image/filial/suit/7.png);"></div>
                 </div>
             </div>
         </div>
