--- a/filial.html
+++ b/filial.html
@@ -270,8 +270,36 @@
             <div class="course-test_wrap">
                 <h2 data-aos="fade-right" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Записаться на визит<br />в школу
                 </h2>
-                <p data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="1500"><a class="button_red_full"
-                        href="https://mrqz.me/5f58e9d98b67550044b35333">Записаться</a></p>
+                <form class="flex">
+                    <input 
+                        data-aos="fade-up" 
+                        data-aos-once="true" 
+                        data-aos-offset="250" 
+                        data-aos-duration="700" 
+                        type="text" 
+                        placeholder="Имя" />
+                    <input 
+                        data-aos="fade-up" 
+                        data-aos-once="true" 
+                        data-aos-offset="250" 
+                        data-aos-duration="900" 
+                        type="text" 
+                        placeholder="Имя" />
+                    <input 
+                        data-aos="fade-up" 
+                        data-aos-once="true" 
+                        data-aos-offset="250" 
+                        data-aos-duration="1000" 
+                        type="text" 
+                        placeholder="Имя" />
+                    <input 
+                        data-aos="fade-up" 
+                        data-aos-once="true" 
+                        data-aos-offset="250" 
+                        data-aos-duration="1100" 
+                        type="submit"
+                        value="Отправть" />
+                </form>
             </div>
         </div>
 
