--- a/filial4.html
+++ b/filial4.html
@@ -283,14 +283,14 @@
                         data-aos-offset="250" 
                         data-aos-duration="900" 
                         type="text" 
-                        placeholder="Имя" />
+                        placeholder="E-mail" />
                     <input 
                         data-aos="fade-up" 
                         data-aos-once="true" 
                         data-aos-offset="250" 
                         data-aos-duration="1000" 
                         type="text" 
-                        placeholder="Имя" />
+                        placeholder="Телефон" />
                     <input 
                         data-aos="fade-up" 
                         data-aos-once="true" 
